bk_ida/gccida/g0/grokdeclarator
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4516:56: error: must use 'enum' tag to refer to type 'decl_context'
tree  grokdeclarator( tree declarator, tree declspecs, decl_context decl_context, int initialized) 
                                                       ^
                                                       enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4523:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4526:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4535:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4536:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4538:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4540:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4541:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4543:1: error: must use 'enum' tag to refer to type 'decl_context'
decl_context decl_contexta; // [rsp+Ch] [rbp-184h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4516:69: note: enum 'decl_context' is hidden by a non-type declaration of 'decl_context' here
tree  grokdeclarator( tree declarator, tree declspecs, decl_context decl_context, int initialized) 
                                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4551:1: error: must use 'enum' tag to refer to type 'rid'
rid i; // [rsp+5Ch] [rbp-134h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4582:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code innermost_code; // [rsp+138h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4773:7: error: use of undeclared identifier 'already_1'
if ( !already_1 && !pedantic ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/c-decl.c:4776:1: error: use of undeclared identifier 'already_1'
already_1 = 1; 
^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/grokdeclarator/src/obj/c-decl.o] Error 1
